--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.github.Umutayb</groupId>
   <artifactId>Api-Assured</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2</version>
   <packaging>jar</packaging>
 
   <name>Api Assured</name>
@@ -25,6 +25,13 @@
   </properties>
 
   <dependencies>
+    <!-- Utilities -->
+    <dependency>
+      <groupId>com.github.umutayb</groupId>
+      <artifactId>java-utilities</artifactId>
+      <version>0.0.3</version>
+    </dependency>
+
     <!-- Cucumber -->
     <dependency>
       <groupId>io.cucumber</groupId>
