--- a/pom.xml
+++ b/pom.xml
@@ -75,31 +75,6 @@
       <scope>compile</scope>
     </dependency>
 
-    <!-- Selenium -->
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-java</artifactId>
-      <version>3.11.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>htmlunit-driver</artifactId>
-      <version>2.20</version>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-api</artifactId>
-      <version>3.141.59</version>
-    </dependency>
-
-    <!-- Appium -->
-    <dependency>
-      <groupId>io.appium</groupId>
-      <artifactId>java-client</artifactId>
-      <version>7.3.0</version>
-      <scope>compile</scope>
-    </dependency>
-
     <!-- Commons -->
     <dependency>
       <groupId>commons-io</groupId>
@@ -132,14 +107,6 @@
       <scope>compile</scope>
     </dependency>
 
-    <!-- Wiremock -->
-    <dependency>
-      <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock-jre8</artifactId>
-      <version>2.27.2</version>
-      <scope>compile</scope>
-    </dependency>
-
     <!-- Google Simple Json -->
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
@@ -162,13 +129,6 @@
       <scope>compile</scope>
     </dependency>
 
-    <!-- Web Driver Manager -->
-    <dependency>
-      <groupId>io.github.bonigarcia</groupId>
-      <artifactId>webdrivermanager</artifactId>
-      <version>5.0.2</version>
-    </dependency>
-
     <!-- Assert -->
     <dependency>
       <groupId>org.assertj</groupId>
@@ -177,11 +137,38 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Web Driver Extensions -->
+    <!-- OKHttp -->
     <dependency>
-      <groupId>com.github.webdriverextensions</groupId>
-      <artifactId>webdriverextensions</artifactId>
-      <version>3.11.2</version>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>3.12.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>logging-interceptor</artifactId>
+      <version>3.12.2</version>
+    </dependency>
+
+    <!-- Retrofit -->
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>adapter-rxjava</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>converter-gson</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>retrofit</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>converter-jackson</artifactId>
+      <version>2.9.0</version>
     </dependency>
   </dependencies>
 
@@ -204,8 +191,8 @@
         <version>${maven.compiler.version}</version>
         <configuration>
           <encoding>UTF-8</encoding>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
 
