--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.github.Umutayb</groupId>
   <artifactId>Api-Assured</artifactId>
-  <version>0.7.2</version>
+  <version>0.7.3</version>
   <packaging>jar</packaging>
 
   <name>Api Assured</name>
@@ -15,13 +15,13 @@
   <properties>
     <buildDirectory>${project.basedir}/out/artifacts/Api-Assured_jar</buildDirectory>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <serenity.maven.version>1.9.12</serenity.maven.version>
     <maven.surefire.version>2.22.1</maven.surefire.version>
     <maven.compiler.version>3.8.0</maven.compiler.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <serenity.version>1.9.12</serenity.version>
-    <cucumber.version>4.8.0</cucumber.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <selenium.version>4.4.0</selenium.version>
+    <retrofit.version>2.9.0</retrofit.version>
+    <okhttp.version>4.10.0</okhttp.version>
   </properties>
 
   <dependencies>
@@ -29,82 +29,41 @@
     <dependency>
       <groupId>com.github.umutayb</groupId>
       <artifactId>java-utilities</artifactId>
-      <version>0.3.3</version>
-    </dependency>
-
-    <!-- Commons -->
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.11.0</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <!-- REST Assured -->
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <version>4.5.0</version>
-      <scope>compile</scope>
+      <version>0.3.6</version>
     </dependency>
 
     <!-- OKHttp -->
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <version>3.11.0</version>
+      <version>${okhttp.version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>logging-interceptor</artifactId>
-      <version>3.11.0</version>
+      <version>${okhttp.version}</version>
     </dependency>
 
     <!-- Retrofit -->
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>adapter-rxjava</artifactId>
-      <version>2.9.0</version>
+      <version>${retrofit.version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>converter-gson</artifactId>
-      <version>2.9.0</version>
+      <version>${retrofit.version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>retrofit</artifactId>
-      <version>2.9.0</version>
+      <version>${retrofit.version}</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.retrofit2</groupId>
       <artifactId>converter-jackson</artifactId>
-      <version>2.9.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup.retrofit2</groupId>
-      <artifactId>converter-scalars</artifactId>
-      <version>2.9.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup.retrofit2</groupId>
-      <artifactId>converter-simplexml</artifactId>
-      <version>2.9.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup.retrofit2</groupId>
-      <artifactId>converter-moshi</artifactId>
-      <version>2.9.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup.retrofit2</groupId>
-      <artifactId>converter-protobuf</artifactId>
-      <version>2.9.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup.retrofit2</groupId>
-      <artifactId>converter-wire</artifactId>
-      <version>2.9.0</version>
+      <version>${retrofit.version}</version>
     </dependency>
   </dependencies>
 
@@ -120,7 +79,6 @@
     <directory>${buildDirectory}</directory>
 
     <plugins>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
